force-app/main/default/objects/HyperBatchOutput__c/HyperBatchOutput__c.object-meta.xml
<CustomObject>
    <label>HyperBatchOutput</label>
    <nameField>
        <displayFormat>HBO-{00000000}</displayFormat>
        <label>HyperBatchOutput Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HyperBatchOutputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>