force-app/main/default/objects/HyperBatchOutput__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <externalId>true</externalId>
    <label>AsyncApexJobId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>