force-app/main/default/objects/HyperBatchOutput__c/fields/BatchState10__c.field-meta.xml
<CustomField>
    <fullName>BatchState10__c</fullName>
    <label>BatchState10</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>