force-app/main/default/objects/HyperBatchOutput__c/fields/BatchState11__c.field-meta.xml
<CustomField>
    <fullName>BatchState11__c</fullName>
    <label>BatchState11</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>