force-app/main/default/objects/HyperBatchOutput__c/fields/BatchState12__c.field-meta.xml
<CustomField>
    <fullName>BatchState12__c</fullName>
    <label>BatchState12</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>